--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/lyubov-voloshko/testBlog#readme",
   "dependencies": {
-    "metalsmith": "^2.3.0"
+    "metalsmith": "^2.3.0",
+    "metalsmith-markdown": "^0.2.2"
   }
 }
